@@ -1,17 +1,15 @@
 package faang.school.godbless.sprint3.google_maps;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class LocationSearchEngine {
     public List<Location> filterLocations(List<Location> locations, Predicate<Location> condition) {
         return locations.stream()
                 .filter(condition)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void processLocations(List<Location> locations, Consumer<Location> action) {
@@ -21,6 +19,6 @@ public class LocationSearchEngine {
     public List<Double> calculateDistances(List<Location> locations, Function<Location, Double> function) {
         return locations.stream()
                 .map(function)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
